Improve error logging from the bitbucket client. This helps to understand what is going wrong (e.g. HTTP 403).
Reduce duplicate code by sharing Apache HTTP client management between bitbucket server and cloud clients.